snapshots/noye__modules__pictures__tests__pictures-3.snap
---
source: src/modules/pictures/mod.rs
expression: "responses.get_reply::<responses::Builtin>()"
---
UnknownSubcommand:
  command: foobar baz quux
