snapshots/noye__modules__pictures__tests__pictures-6.snap
---
source: src/modules/pictures/mod.rs
expression: "responses.get_reply::<responses::Pictures>()"
---
Listing:
  commands: "!pictures, !youtube"
