snapshots/noye__modules__pictures__tests__pictures.snap
---
source: src/modules/pictures/mod.rs
expression: "responses.get_reply::<responses::Pictures>()"
---
Listing:
  commands: "!bar, !baz, !foo"
